corrected syntax to align spacing

--- a/css/grid-layout.css
+++ b/css/grid-layout.css
@@ -44,3 +44,18 @@
     width: 12.50%;
    border-left: 1px solid black;
 }
+.second-fourth {
+    width: 25%;
+    border-left:1px solid black;
+
+}
+.second-half {
+    width: 50%;
+    border-left:1px solid black;
+
+}
+.second-eigth {
+    width: 12.50%;
+    border-left:1px solid black;
+
+}
